--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,6 +56,7 @@ jobs:
         env:
           PG_VERSION: ${{ matrix.postgres }}
       - name: Install extension
+        continue-on-error: true
         run: |
           cargo install cargo-pgrx --version 0.12.7
           cargo pgrx init "--pg$PG_VERSION" /usr/bin/pg_config
@@ -65,6 +66,8 @@ jobs:
           cargo pgrx install --sudo --pg-config /usr/bin/pg_config --package lantern_extras
         env:
           PG_VERSION: ${{ matrix.postgres }}
+      - name: sudo cat cacheproxy log
+        run: sudo cat /var/log/cacheproxy.log
       - name: Run postgres
         run: RUN_POSTGRES=1 ./ci/scripts/build-extras.sh
         env:
