--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubicloud-standard-4-arm]
+        os: [ubicloud-standard-2]
         postgres: [15]
     steps:
       - uses: actions/checkout@v4
