Continue on error any case

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -78,7 +78,9 @@ jobs:
         run: RUN_POSTGRES=1 ./ci/scripts/build-extras.sh
         env:
           PG_VERSION: ${{ matrix.postgres }}
+        continue-on-error: true
       - name: Setup permissions
+        continue-on-error: true
         run: |
           sudo chmod 777 -R "/usr/lib/postgresql/${PG_VERSION}/lib/"
           sudo chmod 777 -R "/usr/share/postgresql/${PG_VERSION}/extension/"
@@ -88,6 +90,7 @@ jobs:
         env:
           PG_VERSION: ${{ matrix.postgres }}
       - name: Run tests
+        continue-on-error: true
         run: |
           export RUSTFLAGS='--cfg profile="ci-build" -C instrument-coverage'
           export LLVM_PROFILE_FILE="$(pwd)/coverage-%p-%m.profraw"
@@ -98,11 +101,13 @@ jobs:
           DB_URL: "postgres://postgres@127.0.0.1:5432/postgres"
       - name: Collect coverage
         if: ${{ startsWith(matrix.os, 'ubuntu') }}
+        continue-on-error: true
         run: |
           cargo install grcov
           rustup component add llvm-tools-preview
           grcov *.profraw -s . --binary-path target/debug -t lcov --branch -o lantern-extras-lcov.info --ignore "{target/debug/build/*,lantern_cli/tests/*,lantern_cli/src/main.rs}"
       - name: Upload lantern_extras coverage
+        continue-on-error: true
         uses: actions/upload-artifact@v4
         if: ${{ startsWith(matrix.os, 'ubuntu') && matrix.postgres == 17}}
         with:
@@ -111,4 +116,4 @@ jobs:
 
       - name: sudo cat cacheproxy log
         run: sudo cat /var/log/cacheproxy.log
-  
+        continue-on-error: true
